update all example
